Bug 506625 - Select autofil transaction dialog not displayed if Payment amount is filled
Summary: Select autofil transaction dialog not displayed if Payment amount is filled
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 506939 507400 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-05 09:42 UTC by gbcreation73
Modified: 2025-07-30 14:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gbcreation73 2025-07-05 09:42:46 UTC
SUMMARY

When I add a new transaction by double-clicking on the last empty line of a ledger, the Date field is focused by default. I set the transaction date then hit Tab to go to the next field which is Payment Amount. I filled it and hit Tab two times to go to the Deposit Amount field, then the Payer/Payee field. I start to type the Payer name and the completion list appears. I select the corresponding payee in the list and hit Enter. And the Select autofill transaction dialog does not appear.

If I do the same steps without filling the Payment Amount, then this dialog appears.

STEPS TO REPRODUCE
1. Select a ledger view
2. Add a new transaction
3. Fill the Date and Payment Amount fields
4. Start to type the Payer field, select the appropriate payer in the completion list and hit Enter
5. The Select autofill transaction does not appear

OBSERVED RESULT

The Select autofilil transaction dialog is not displayed when the Payment Amount field is filled

EXPECTED RESULT

The Select autofill transaction dialog should be displayed even if the Payment Amount field is filled. All fields of the newly created transaction should be auto-filled with the values of the selected previous transaction excepted those already filled (in my scenario, the Payment Amount field should not be overridden).

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.4.0
Comment 1 Thomas Baumgart 2025-07-05 16:08:49 UTC
Git commit 8c019fb0d9ad9f47819a472f5bcfb7f10cc74931 by Thomas Baumgart.
Committed on 05/07/2025 at 15:39.
Pushed by tbaumgart into branch 'master'.

Allow more data to be entered when searching for old txn

The search for old transactions for a payee was only allowed when no
amount, no memo and no category was entered. This is a bit tight and
has been changed to only be disabled when a category is entered before
the payee.
FIXED-IN: 5.2.1

M  +43   -16   kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/8c019fb0d9ad9f47819a472f5bcfb7f10cc74931
Comment 2 Thomas Baumgart 2025-07-05 16:09:02 UTC
Git commit 078fc0a68dae0551c6874211c1e16d1b56580e5c by Thomas Baumgart.
Committed on 05/07/2025 at 16:07.
Pushed by tbaumgart into branch '5.2'.

Allow more data to be entered when searching for old txn

The search for old transactions for a payee was only allowed when no
amount, no memo and no category was entered. This is a bit tight and
has been changed to only be disabled when a category is entered before
the payee.
FIXED-IN: 5.2.1

(cherry picked from commit 8c019fb0d9ad9f47819a472f5bcfb7f10cc74931)

M  +46   -16   kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/078fc0a68dae0551c6874211c1e16d1b56580e5c
Comment 3 Thomas Baumgart 2025-07-12 11:51:02 UTC
*** Bug 506939 has been marked as a duplicate of this bug. ***
Comment 4 tneo 2025-07-30 12:54:29 UTC
*** Bug 507400 has been marked as a duplicate of this bug. ***
Comment 5 tneo 2025-07-30 12:56:19 UTC
If I understand your commit comment correctly: 
- You only will populate the fields when I start with the category first? 
- The search does not start when I start with the payee (as is the logic in the form)?
Comment 6 Thomas Baumgart 2025-07-30 13:22:28 UTC
Not really, the feature is about loading the category based an a previously entered transaction for the same payee. Before the last change you had to go to the payee and no other field must have received data. This has been changed so that you can enter the amount and when the payee is entered, recent transactions are searched. Hope that makes it clear(er).
Comment 7 tneo 2025-07-30 14:33:54 UTC
Yes thank you. That sounds to resolve my issue. I have to wait for openSUSE Tumbleweed to pick up the change. :)